Install Eleventy, Eleventy Image and Baseline

--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-img": "^6.0.4",
+    "@apleasantview/eleventy-plugin-baseline": "^0.1.0-next.19"
+  }
 }
