--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-img": "^6.0.4",
-    "@apleasantview/eleventy-plugin-baseline": "^0.1.0-next.19"
+    "@apleasantview/eleventy-plugin-baseline": "^0.1.0-next.19",
+    "cssnano": "^7.1.2",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-mixins": "^12.1.2",
+    "postcss-preset-env": "^10.6.0"
   }
 }
